--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
         function pilihHmm() {
             document.getElementById('content').innerHTML = `
-                <h2 class="maaf">Maaf yaa sayang aku tau kok kamu kesal, aku salah. maaf yaa sayang aku kurang pekaa sama kamuu, Aku sayang kamu banget! ❤️💖</h2>
-                <p>For my limited edition girl 🎉</p>
+                <h2 class="maaf">For my limited edition girl 🎉</h2>
+                <p>Maaf yaa sayang aku tau kok kamu kesal, aku salah. maaf yaa sayang aku kurang pekaa sama kamuu, Aku sayang kamu banget! ❤️💖 </p>
             `;
         }
 
